--- a/index.css
+++ b/index.css
@@ -224,7 +224,8 @@ body, html {
 .skills {
 	white-space: pre-wrap;
   	flex-grow: 1;
-  	min-width: 10vw;
+  	width: 20vw;
+	min-width: 100px;
 }
 
 .desc {
