--- a/index.css
+++ b/index.css
@@ -19,8 +19,7 @@
 	margin: 0%;
 	padding: 0%;
 	color: white;
-	/* background-color: transparent; */
-	font-family: "Nunito";
+	font-family: "Nunito", Arial, sans-serif;
 	font-weight: 600;
 	font-style: normal;
 }
