--- a/index.css
+++ b/index.css
@@ -32,14 +32,14 @@ body, html {
 }
 
 .even-image {
-	width: 400px;
+	width: 300px;
 	height: 300px;
 	border-radius: 5%;
 }
 
 .odd-image {
-	width: 40vw;
-	height: 40vh;
+	width: 500px;
+	height: 300px;
 	border-radius: 5%;
 }
 
@@ -77,16 +77,16 @@ body, html {
 		margin: auto !important;
 		gap: 2vw;
 		margin: 0%;
-		width: 85vw;
+		width: 85vw !important;
 	}
 	.even-image{ 
-		width: 85vw;
+		width: 85vw !important;
 		height: 40vh;
 		border-radius: 5%;
 		margin: 0% !important;
 	}
 	.odd-image {
-		width: 90vw;
+		width: 85vw;
 		height: 40vh;
 	}
 	.odd-class {
@@ -107,7 +107,7 @@ body, html {
 	.skills {
 		white-space: pre-wrap;
 		flex-grow: 1;
-		min-width: 80vw;
+		min-width: 80vw !important;
 		text-align: center;
 		margin: auto;
 	}
@@ -219,12 +219,12 @@ body, html {
 
 .even-class {
 	display: flex;
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin:auto;
 	gap: 2vw;
 	background-color: #545454 !important;
 	border-radius: 25px;
 	position: relative;
+	width: 95vw;
 }
 
 .odd-class {
