--- a/index.css
+++ b/index.css
@@ -131,8 +131,8 @@ body, html {
 	animation-name: intro;
 	animation-duration: 3s;
 	text-align: center;
-	font-family: "Nunito";
-	font-size: 84px;
+	font: "Nunito", Arial, sans-serif;
+	font-size: 84px !important;
 	margin-bottom: 0%;
 	margin-top: 2%;
 }
